Trying to fix card and button spacing

--- a/style.css
+++ b/style.css
@@ -194,6 +194,7 @@
     margin-left: 1.25rem;
     margin-left: 1.25rem;
     margin-bottom: 1rem;
+    padding-bottom: 1rem;
     gap: 1.25rem;
     bottom: 0;
     display: flex;
